--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-before_install: gem install bundler --pre
+before_install: gem install bundler -v "1.11.2"
 rvm:
   - 2.0.0
   - 2.1.5
